--- a/html-css/desafios/d012/styles/index-style.css
+++ b/html-css/desafios/d012/styles/index-style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&family=Major+Mono+Display&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poiret+One&family=Press+Start+2P&family=Sriracha&display=swap'); /*Sriracha*/
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap'); /*Passion One*/
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
 *{
     padding: 0px;
 }
@@ -8,7 +18,7 @@ html, body{
     background-color: gainsboro;
     color: white;
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font1);
 
     margin: 0px;
     min-height: 100vh;
@@ -37,6 +47,8 @@ header h1{
     margin: 0px;
     padding: 0px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 4em;
 }
 
 header hr{
@@ -67,6 +79,8 @@ footer a:hover, header a:hover{
 section{
     padding: 10vh 2vh;
     line-height: 2em;
+    font-family: var(--font3);
+    font-size: 1.8em;
 }
 
 section.section-normal{
